<resources>
    <string name="app_name">Data Vault</string>
    <string name="name_label">Name:</string>
    <string name="enter_text_hint">Enter Text</string>
    <string name="estimated_value_label">Estimated Value:</string>
    <string name="date_of_acquisition_label">Date of Acquisition:</string>
    <string name="make_label">Make:</string>
    <string name="model_label">Model:</string>
    <string name="serial_number_label">Serial Number:</string>
    <string name="delete_button_text">Delete</string>
    <string name="enter_value_hint">Enter value</string>
    <string name="enter_date_hint">Enter date</string>
    <string name="scan_serial_button_text">Scan Serial Number</string>
    <string name="description_label">Description</string>
    <string name="scan_barcode_button_text">Scan Barcode</string>
    <string name="comment_label">Comment</string>
    <string name="add_tags_button_text">Add Tags</string>
    <string name="add_tag_title">Add Tag</string>
    <string name="edit_tag_title">Edit Tag</string>
    <string name="add_tag_subtitle">Tag Name</string>
    <string name="add_tag_hint">Tag name…</string>
    <string name="tag_manager_label">Tag Manager</string>
    <string name="tag_manage_back_button_text">Back</string>
    <string name="tag_manage_confirm_button_text">Confirm</string>
    <string name="tag_manage_add_button_text">Add</string>
    <string name="tag_manage_edit_button_text">Edit Tag</string>
    <string name="tag_manage_delete_button_text">Delete Tag</string>

    <string name="back_button_text">Back</string>
    <string name="confirm_button_text">Confirm</string>

    <string name="app_title_text">Data Vault</string>
    <string name="login_button_text">Login</string>
    <string name="create_acc_button_text">Create New\nAccount</string>
    <string name="login_title_text">Login</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_login_button_text">Confirm</string>
    <string name="create_acc_title_text">Create Account</string>

    <string name="placeholder_name_1">RTX 4090</string>
    <string name="placeholder_make_1">EVGA</string>
    <string name="placeholder_tag_1">Graphics card</string>

    <!-- Strings related to the list view activity -->
    <string name="empty_summary_view">No Items</string>
    <string name="list_add_tag">Add Tag…</string>
    <string name="list_sort_filter">Sort/Filter</string>
    <string name="list_search">Search</string>
    <string name="list_options">Options</string>

    <!-- Strings related to the add/edit/details fragments -->
    <string name="date_format">yyyy-MM-dd</string>
    <string name="add_edit_empty">[PLACEHOLDER]</string>
    <string name="add_edit_btn_back">Back</string>
    <string name="add_edit_btn_save">Save</string>
    <string name="add_edit_btn_cancel">Cancel</string>
    <string name="add_edit_btn_edit">Edit</string>
    <string name="add_edit_btn_delete">Delete</string>
    <string name="add_edit_btn_scan_serial">Scan Barcode</string>
    <string name="add_edit_btn_scan_autofill">Autofill from\nBarcode</string>
    <string name="add_edit_btn_tag">Add Tag</string>
    <string name="add_edit_btn_picture">Add Picture</string>
    <string name="add_edit_text_details">Details</string>
    <string name="add_edit_text_tag">Tags</string>
    <string name="add_edit_text_picture">Pictures</string>
    <string name="add_edit_text_name">Name</string>
    <string name="add_edit_text_name_hint">Item Name</string>
    <string name="add_edit_text_value">Estimated Value</string>
    <string name="add_edit_text_value_hint">000.00</string>
    <string name="add_edit_text_date">Date of Acquisition</string>
    <string name="add_edit_text_date_hint">YYYY-MM-DD</string>
    <string name="add_edit_text_model">Model</string>
    <string name="add_edit_text_model_hint">Item Model</string>
    <string name="add_edit_text_make">Make</string>
    <string name="add_edit_text_make_hint">Item Make</string>
    <string name="add_edit_text_serial">Serial Number</string>
    <string name="add_edit_text_serial_hint">Item Serial</string>
    <string name="add_edit_text_description">Description</string>
    <string name="add_edit_text_description_hint">Add description…</string>
    <string name="add_edit_text_comment">Comment</string>
    <string name="add_edit_text_comment_hint">Add comment…</string>
    <string name="invalid_username_password">Incorrect Username or Password</string>
    <!-- -end- -->

    <!-- Strings related to query fragment -->
    <string name="ascending_title_text">Ascending</string>
    <string name="descending_title_text">Descending</string>
    <string name="filter_by_title_text">Filter By:</string>
    <string name="start_date_title_text">Start Date</string>
    <string name="end_date_title_text">End Date</string>
    <string name="reset_button_text">Reset</string>
    <string name="filter_tags_title_text">Tags</string>
    <string name="make_title_text">Make</string>
    <string name="filter_make_hint_text">Enter Make</string>
    <string name="filter_keywords_title_text">Description Keywords</string>
    <string name="filter_keywords_hint_text">Enter Keywords</string>
    <string name="sort_by_title_text">Sort By:</string>
    <!-- -end- -->

    <!-- Strings in sorting elements spinner -->
    <string-array name="SortingElements">
        <item>Select Sorting Elements</item>
        <item>Date</item>
        <item>Make</item>
        <item>Estimated Value</item>
        <item>Description</item>
        <item>Tags</item>
    </string-array>
    <!-- -end- -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_serial_num">1234567</string>
    <string name="date_filter">Date Filter</string>

</resources>
