<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/BottomBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/TagListLayout"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                android:background="@color/add_edit_layout_bgr_test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ScanningLayout">

                <ListView
                    android:id="@+id/list_tag"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/TagLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/TagListLayout"
                app:layout_constraintStart_toStartOf="@+id/TagListLayout"
                app:layout_constraintTop_toBottomOf="@+id/TagListLayout">

                <Button
                    android:id="@+id/button_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/add_edit_btn_bgr_test"
                    android:text="@string/add_edit_btn_tag"
                    android:textColor="@color/add_edit_btn_text_test"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/DetialsLongLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ScanningLayout">

                <EditText
                    android:id="@+id/text_description_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_edit_text_description_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/text_description"
                    app:layout_constraintTop_toBottomOf="@+id/text_description" />

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/add_edit_text_description"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/text_comment_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_edit_text_comment_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/text_comment"
                    app:layout_constraintTop_toBottomOf="@+id/text_comment" />

                <TextView
                    android:id="@+id/text_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_comment"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_description"
                    app:layout_constraintTop_toBottomOf="@+id/text_description_disp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ScanningLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/DetailsShortLayout">

                <Button
                    android:id="@+id/button_serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/add_edit_btn_bgr_test"
                    android:text="@string/add_edit_btn_scan_serial"
                    android:textColor="@color/add_edit_btn_text_test"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/add_edit_btn_bgr_test"
                    android:text="@string/add_edit_btn_scan_barcode"
                    android:textColor="@color/add_edit_btn_text_test"
                    app:layout_constraintBottom_toBottomOf="@+id/button_serial"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button_serial" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/DetailsShortLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/add_edit_text_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_model"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_make"
                    app:layout_constraintTop_toBottomOf="@+id/text_make" />

                <TextView
                    android:id="@+id/text_serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_serial"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_model"
                    app:layout_constraintTop_toBottomOf="@+id/text_model" />

                <EditText
                    android:id="@+id/text_serial_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/add_edit_text_serial_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_serial"
                    app:layout_constraintStart_toStartOf="@+id/text_name_disp"
                    app:layout_constraintTop_toTopOf="@+id/text_serial" />

                <EditText
                    android:id="@+id/text_name_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="180dp"
                    android:hint="@string/add_edit_text_name_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_name"
                    app:layout_constraintStart_toEndOf="@+id/text_name"
                    app:layout_constraintTop_toTopOf="@+id/text_name" />

                <EditText
                    android:id="@+id/text_make_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/add_edit_text_make_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_make"
                    app:layout_constraintStart_toStartOf="@+id/text_name_disp"
                    app:layout_constraintTop_toTopOf="@+id/text_make" />

                <EditText
                    android:id="@+id/text_date_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:editable="false"
                    android:hint="@string/add_edit_text_date_hint"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_date"
                    app:layout_constraintStart_toStartOf="@+id/text_name_disp"
                    app:layout_constraintTop_toTopOf="@+id/text_date" />

                <EditText
                    android:id="@+id/text_model_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/add_edit_text_model_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_model"
                    app:layout_constraintStart_toStartOf="@+id/text_name_disp"
                    app:layout_constraintTop_toTopOf="@+id/text_model" />

                <EditText
                    android:id="@+id/text_value_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/add_edit_text_value_hint"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_value"
                    app:layout_constraintStart_toStartOf="@+id/text_name_disp"
                    app:layout_constraintTop_toTopOf="@+id/text_value" />

                <TextView
                    android:id="@+id/text_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_make"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_date"
                    app:layout_constraintTop_toBottomOf="@+id/text_date" />

                <TextView
                    android:id="@+id/text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_value"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_name" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_edit_text_date"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_value"
                    app:layout_constraintTop_toBottomOf="@+id/text_value" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TopBarLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/add_edit_layout_bgr_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/add_edit_layout_bgr_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/add_edit_btn_bgr_test"
            android:text="@string/add_edit_btn_save"
            android:textColor="@color/add_edit_btn_text_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/add_edit_btn_bgr_test"
            android:text="@string/add_edit_btn_cancel"
            android:textColor="@color/add_edit_btn_text_test"
            app:layout_constraintBottom_toBottomOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>